Updated UpdateChecker